--- a/ConsultasAgendadas.jrxml
+++ b/ConsultasAgendadas.jrxml
@@ -6,97 +6,66 @@
 	<queryString language="hql">
 		<![CDATA[]]>
 	</queryString>
+	<field name="paciente.nome" class="java.lang.String"/>
 	<field name="data" class="java.sql.Timestamp"/>
-	<field name="paciente" class="java.lang.Object"/>
-	<field name="status" class="java.lang.Object"/>
-	<field name="medico" class="java.lang.Object"/>
-	<field name="receita" class="java.lang.Object"/>
-	<field name="sala" class="java.lang.String"/>
+	<field name="medico.nome" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
 		<band height="131" splitType="Stretch">
 			<staticText>
-				<reportElement x="46" y="30" width="509" height="46" forecolor="#0066CC"/>
+				<reportElement x="96" y="27" width="366" height="46" forecolor="#0066CC"/>
 				<textElement>
 					<font fontName="Arial Black" size="30"/>
 				</textElement>
-				<text><![CDATA[Lista Histórico de Pacientes]]></text>
+				<text><![CDATA[Consultas Agendadas]]></text>
 			</staticText>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="22" splitType="Stretch">
 			<staticText>
-				<reportElement x="4" y="2" width="100" height="20" forecolor="#CC0000"/>
+				<reportElement x="26" y="0" width="100" height="20" forecolor="#990000"/>
 				<textElement>
 					<font fontName="Arial Black" size="13"/>
 				</textElement>
-				<text><![CDATA[Paciente]]></text>
+				<text><![CDATA[Nome]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="104" y="2" width="100" height="20" forecolor="#CC0000"/>
+				<reportElement x="191" y="0" width="135" height="20" forecolor="#990000"/>
 				<textElement>
 					<font fontName="Arial Black" size="13"/>
 				</textElement>
-				<text><![CDATA[Status]]></text>
+				<text><![CDATA[Data da Consulta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="204" y="2" width="100" height="20" forecolor="#CC0000"/>
+				<reportElement x="409" y="0" width="112" height="20" forecolor="#990000"/>
 				<textElement>
 					<font fontName="Arial Black" size="13"/>
 				</textElement>
-				<text><![CDATA[Receita]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="350" y="2" width="100" height="20" forecolor="#CC0000"/>
-				<textElement>
-					<font fontName="Arial Black" size="13"/>
-				</textElement>
-				<text><![CDATA[Medico]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="450" y="2" width="100" height="20" forecolor="#CC0000"/>
-				<textElement>
-					<font fontName="Arial Black" size="13"/>
-				</textElement>
-				<text><![CDATA[Data]]></text>
+				<text><![CDATA[Médico]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="23" splitType="Stretch">
-			<textField isBlankWhenNull="false">
-				<reportElement x="4" y="3" width="100" height="20" forecolor="#0066CC"/>
+			<textField>
+				<reportElement key="textField" x="26" y="3" width="142" height="20" forecolor="#0066CC"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{paciente}.getNome()]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="false">
-				<reportElement x="104" y="3" width="100" height="20" forecolor="#0066CC"/>
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{status}.getDescricao()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{paciente.nome}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="204" y="3" width="146" height="20" forecolor="#0066CC"/>
+				<reportElement key="textField" x="409" y="3" width="146" height="20" forecolor="#0066CC"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{receita}.getMedicamento()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{medico.nome}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="350" y="3" width="100" height="20" forecolor="#0066CC"/>
-				<textElement>
-					<font size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{medico}.getNome()]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="450" y="3" width="100" height="20" forecolor="#0066CC"/>
+				<reportElement key="textField" x="191" y="3" width="197" height="20" forecolor="#0066CC"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
